# aw-report-portal

./: .gitignore  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  clients.py  reports.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  rate_limit.py  request_utils.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 7f4613f8a00b_initial_schema.py
backend/app/models/: __init__.py  account.py  audit_log.py  client.py  deductible.py  liability.py  report.py  trust.py  user.py
backend/app/repositories/: client_repo.py  report_repo.py  user_repo.py
backend/app/schemas/: auth.py  client.py  report.py
backend/app/services/: audit_service.py  auth_service.py  calculation_service.py  canva_service.py  client_service.py  pdf_service.py  report_service.py
backend/app/templates/: base.css  sacs.html  tcc.html
backend/tests/: conftest.py  test_api_flow.py  test_calculation_service.py  test_canva_service.py  test_security_mask.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  clients.ts  reports.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx  useAuth.ts
(+18 files in other folders)
